--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUKllDN_ykCu9mpXGViWnw1WLCAy7sud_sqqVhfhY&s"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="https://www.pusan.ac.kr/_contents/kor/_Img/07Intro/ui09.jpg" />
+    <meta name="description" content="부산대 수강신청 도우미" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kdykakaoshop.netlify.app" />
+    <meta property="og:title" content="부산대 수강신청 도우미" />
+    <meta property="og:image" content="https://www.pusan.ac.kr/_contents/kor/_Img/07Intro/ui09.jpg" />
+    <meta property="og:description" content="부산대 수강신청 도우미" />
+    <meta property="og:site_name" content="부산대 수강신청 도우미" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,8 +33,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>부산대 수강신청 도우미</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LM94DYMCMQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-LM94DYMCMQ');
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
