refactor: og url 변경

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="https://www.pusan.ac.kr/_contents/kor/_Img/07Intro/ui09.jpg" />
     <meta name="description" content="부산대 수강신청 도우미" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kdykakaoshop.netlify.app" />
+    <meta property="og:url" content="https://pnu-register-practice.netlify.app/" />
     <meta property="og:title" content="부산대 수강신청 도우미" />
     <meta property="og:image" content="https://www.pusan.ac.kr/_contents/kor/_Img/07Intro/ui09.jpg" />
     <meta property="og:description" content="부산대 수강신청 도우미" />
